# glyph

./: README.md  pyproject.toml
docs/: README.mdpp
examples/glyph-weather/: README.md  pyproject.toml
examples/glyph-weather/glyph/items/weather/: weather.py
glyph/: cli.py  colors.py  const.py  glyph.yaml  item.py  prompt.py  registry.py
glyph/items/: dir.py  exit_code.py  glyph_error.py  venv.py
glyph/items/git/: git.py
tests/: test_glyph.py
